Bug 151988 - Text Grid dialog: select "Grid (lines and characters)" after you have selected "Grid (lines only)", the control "Characters per line" and "Character width" are grayed out
Summary: Text Grid dialog: select "Grid (lines and characters)" after you have selecte...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium normal
Assignee: Kevin Suo
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: Text-Grid
  Show dependency treegraph
 
Reported: 2022-11-10 06:49 UTC by Kevin Suo
Modified: 2022-11-16 19:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2022-11-10 06:49:59 UTC
Steps to Reproduce:

1. New Writer, go to "Tools > Options > LibreOffice Writer > General" and make sure the "Use square page mode for text grid" is *not* selected.

2. Go to "Format > Page Style > Text Grid", select "Grid (lines and characters)".

Now the control "Characters per line" and "Character width" are shown. This is good. These two controls are used for this type of grid thus they should show up.

3. Select "Grid (lines only)".

Now those two controls are grayed out. This is expected since these two controls are not relevant to the grid type ""Grid (lines only)".

4. Select "Grid (lines and characters)".

Now those two controls are still grayed out.

Current Result:
The controls named "Characters per line" and "Character width" are grayed out in step 4.

Expected Result:
The controls named "Characters per line" and "Character width" should be active (not grayed out) in step 4.

Reproduced on both current master (7.5) and 7.4 branch. Fedora 36 GTK3.
Comment 1 Commit Notification 2022-11-12 05:07:01 UTC
Kevin Suo committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1bfb323801b9c88879b5948b16d47cdbbee87ab9

tdf#151988: Enable "Characters per line" and "Character width" when switch...

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-11-16 19:35:54 UTC
Kevin Suo committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/b9534138d604a30e9c73d0819a0dacee0b3178b9

tdf#151988: Enable "Characters per line" and "Character width" when switch...

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.