tdf#151988: Enable "Characters per line" and "Character width" when switch...

... back to grid type "lines and characters".

Also enable "Snap to characters" for grid type "lines and characters" and disbale it
for grid types "lines only" and "no grid".

Change-Id: I101c8d80a79798fc6c992da766c658c3ba8802dd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142513
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>